--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -24,6 +24,7 @@
     "3. C++\n",
     "4. SQL\n",
     "5. Matlab\n",
+    "6. Java"
    ]
   },
   {
@@ -36,10 +37,7 @@
     "3. Scikit-Learn\n",
     "4. Matloblib\n",
     "5. Keras\n",
-    "6. TensorFlow\n",
-    "7. Pytourch\n",
-
-
+    "6. TensorFlow"
    ]
   },
   {
@@ -109,8 +107,7 @@
     "__Objectives:__\n",
     "* List popular languages for Data Science\n",
     "* List common libraries for Data Science\n",
-    "* Examples of simple arithmetic expressions in Python\n",
-   
+    "* Example of evaluating arithmetic expressions in Python"
    ]
   },
   {
@@ -118,7 +115,7 @@
    "metadata": {},
    "source": [
     "## Author\n",
-    "Uyen Tran"
+    "UYEN TRAN"
    ]
   }
  ],
